--- a/back-end/views/requests.pug
+++ b/back-end/views/requests.pug
@@ -4,9 +4,19 @@ html
   body
     h1= message
     br
-    a(class='button' href=url + `/index`) menu
-    br
-    a(class='button' href=url + `/requests`) refresh
+    form(action=url, method='POST')
+      p
+      |
+      input(type='hidden' name='token' value=token)
+      |
+      input(type='submit' name='menu' value='menu') 
+    form(action=url + '/requests', method='POST')
+      p
+      |
+      input(type='hidden' name='token' value=token)
+      |
+      input(type='submit' name='refresh' value='refresh') 
+    
 
     ul 
         each val in requests 
@@ -18,3 +28,6 @@ html
                 input(type='submit' name='accept' value='accept') 
                 |          
                 input(type='submit' name='reject' value='reject')
+                |
+                input(type='hidden' name='token' value=token)
+                
