--- a/back-end/views/users.pug
+++ b/back-end/views/users.pug
@@ -2,14 +2,39 @@ html
   head
     title= title
   body
+    input(type='hidden' name='token' value=token)
     h1= message
-    a(class='button' href=url + `/users`) refresh
+    br
+    form(action=url, method='POST')
+      p
+      |
+      input(type='hidden' name='token' value=token)
+      |
+      input(type='submit' name='menu' value='menu') 
+    form(action=url + '/users', method='POST')
+      p
+      |
+      input(type='hidden' name='token' value=token)
+      |
+      input(type='submit' name='refresh' value='refresh') 
     ul 
         each val in users 
             body= val.firstName + " " + val.lastName + " "
             if val.banned 
-                a(class='button' href=url + `/unban/${val.id}`) unban
+                form(action=url + `/unban/${val.id}`, method='POST')
+                  p
+                  |
+                  input(type='hidden' name='token' value=token)
+                  |
+                  input(type='submit' name='unban' value='unban') 
             else
-                a(class='button' href=url + `/ban/${val.id}`) Ban
+                form(action=url + `/ban/${val.id}`, method='POST')
+                  p
+                  |
+                  input(type='hidden' name='token' value=token)
+                  |
+                  input(type='submit' name='ban' value='ban') 
             br
+            
+                
 
