STUD-89/created views,admin endpoints for reports

--- a/back-end/views/index.pug
+++ b/back-end/views/index.pug
@@ -23,6 +23,12 @@ html
       input(type='hidden' name='token' value=token)
       |
       input(type='submit' name='accept' value='Groups') 
+    form(action=`/admin/reports`, method='POST')
+      p
+      |
+      input(type='hidden' name='token' value=token)
+      |
+      input(type='submit' name='accept' value='Reports') 
 
     
 
